# aor

./: .gitignore  Cargo.toml  init  run  submit
src/: aoc_client.rs  event_date.rs  grid.rs  lib.rs  main.rs  parse.rs  problem.rs  solution.rs  template.rs  timing.rs  util.rs
src/solutions/: day_01_2024.rs  day_01_2025.rs  day_02_2025.rs  day_03_2025.rs  day_04_2025.rs  day_05_2025.rs  day_06_2025.rs  day_07_2025.rs
src/subcommands/: init.rs  mod.rs  run.rs  submit.rs  testgen.rs
timing_macro/: Cargo.toml
timing_macro/src/: lib.rs
